@@ -14,6 +14,7 @@ Version 1.7.13+svn:
      leader (Debian bug #555964)
    * Fix bug #15382 (Player doesn't get transported to the next scenario)
    * Fix bug #15391 (Warnings in multiplayer games)
+   * Allow a 1-sides game to be started (Debian bug #568029)
  * User interface:
    * Rewrote the sizing code of the tree view widget
  * Miscellaneous and bug fixes:
